btr/btr0btr.c
@@ -3178,7 +3178,7 @@ btr_index_rec_validate(
 
 	for (i = 0; i < n; i++) {
 		ulint	fixed_size = dict_col_get_fixed_size(
-			dict_index_get_nth_col(index, i));
+			dict_index_get_nth_col(index, i), page_is_comp(page));
 
 		rec_get_nth_field_offs(offsets, i, &len);
 
